@@ -3,10 +3,11 @@
 var chrome = chrome || {};
 
 chrome.news = [
+	{date: '25 March 2009', text: 'Pretty URLs 0.9.2 released'},
 	{date: '24 Feb 2009', text: 'Pretty URLs 0.9.1 released'},
 	{date: '12 Nov 2008', text: 'Pretty URLs 0.9 released'}	
 ];
 
-chrome.latestVersion = '0.9.1';
+chrome.latestVersion = '0.9.2';
 chrome.upgradeFrom = '';
 chrome.upgradeUrl = '';
